sidux-art-xfce (1.2) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 27 Aug 2008 01:39:04 +0200

sidux-art-xfce (1.1) unstable; urgency=low

  * remove no longer required conflicts
  * depend on real package before virtual 

 -- Bernard Gray <bernard.gray@gmail.com>  Wed, 27 Aug 2008 08:37:08 +1000

sidux-art-xfce (1.0) unstable; urgency=low

  * Initial Release.

 -- Bernard Gray <bernard.gray@gmail.com>  Sun, 24 Aug 2008 18:31:38 +1000