@@ -1,0 +1,86 @@
+[Configuration]
+AccelNewTab=<control><shift>t
+AccelNewWindow=<control><shift>n
+AccelDetachTab=<control><shift>d
+AccelCloseTab=<control><shift>w
+AccelCloseWindow=<control><shift>q
+AccelCopy=<control><shift>c
+AccelPaste=<control><shift>v
+AccelEditHelpers=Disabled
+AccelPreferences=Disabled
+AccelShowMenubar=Disabled
+AccelShowToolbars=Disabled
+AccelShowBorders=Disabled
+AccelFullscreen=F11
+AccelSetTitle=Disabled
+AccelReset=Disabled
+AccelResetAndClear=Disabled
+AccelPrevTab=<control>Page_Up
+AccelNextTab=<control>Page_Down
+AccelSwitchToTab1=<Alt>1
+AccelSwitchToTab2=<Alt>2
+AccelSwitchToTab3=<Alt>3
+AccelSwitchToTab4=<Alt>4
+AccelSwitchToTab5=<Alt>5
+AccelSwitchToTab6=<Alt>6
+AccelSwitchToTab7=<Alt>7
+AccelSwitchToTab8=<Alt>8
+AccelSwitchToTab9=<Alt>9
+AccelContents=F1
+BackgroundMode=TERMINAL_BACKGROUND_SOLID
+BackgroundImageFile=
+BackgroundImageStyle=TERMINAL_BACKGROUND_STYLE_TILED
+BackgroundDarkness=0.500000
+BindingBackspace=TERMINAL_ERASE_BINDING_AUTO
+BindingDelete=TERMINAL_ERASE_BINDING_AUTO
+ColorForeground=White
+ColorBackground=Black
+ColorCursor=Green
+ColorSelection=White
+ColorSelectionUseDefault=TRUE
+ColorPalette1=#000000000000
+ColorPalette2=#aaaa00000000
+ColorPalette3=#0000aaaa0000
+ColorPalette4=#aaaa55550000
+ColorPalette5=#00000000aaaa
+ColorPalette6=#aaaa0000aaaa
+ColorPalette7=#0000aaaaaaaa
+ColorPalette8=#aaaaaaaaaaaa
+ColorPalette9=#555555555555
+ColorPalette10=#ffff55555555
+ColorPalette11=#5555ffff5555
+ColorPalette12=#ffffffff5555
+ColorPalette13=#55555555ffff
+ColorPalette14=#ffff5555ffff
+ColorPalette15=#5555ffffffff
+ColorPalette16=#ffffffffffff
+CommandUpdateRecords=TRUE
+CommandLoginShell=FALSE
+FontAllowBold=TRUE
+FontAntiAlias=TRUE
+FontName=Monospace 12
+MiscAlwaysShowTabs=FALSE
+MiscBell=FALSE
+MiscBordersDefault=TRUE
+MiscCursorBlinks=FALSE
+MiscDefaultGeometry=80x24
+MiscInheritGeometry=FALSE
+MiscMenubarDefault=TRUE
+MiscMouseAutohide=FALSE
+MiscToolbarsDefault=FALSE
+MiscConfirmClose=TRUE
+MiscCycleTabs=TRUE
+MiscTabCloseButtons=TRUE
+MiscTabPosition=GTK_POS_TOP
+ScrollingBar=TERMINAL_SCROLLBAR_RIGHT
+ScrollingLines=1000
+ScrollingOnOutput=TRUE
+ScrollingOnKeystroke=TRUE
+ShortcutsNoMenukey=TRUE
+ShortcutsNoMnemonics=FALSE
+TitleInitial=Terminal
+TitleMode=TERMINAL_TITLE_APPEND
+Term=xterm
+VteWorkaroundTitleBug=TRUE
+WordChars=-A-Za-z0-9,./?%&#:_~
+
