@@ -1,0 +1,35 @@
+[Configuration]
+DefaultView=void
+LastCompactViewZoomLevel=THUNAR_ZOOM_LEVEL_SMALLEST
+LastDetailsViewColumnOrder=THUNAR_COLUMN_NAME,THUNAR_COLUMN_SIZE,THUNAR_COLUMN_TYPE,THUNAR_COLUMN_DATE_MODIFIED
+LastDetailsViewColumnWidths=
+LastDetailsViewFixedColumns=FALSE
+LastDetailsViewVisibleColumns=THUNAR_COLUMN_DATE_MODIFIED,THUNAR_COLUMN_NAME,THUNAR_COLUMN_SIZE,THUNAR_COLUMN_TYPE
+LastDetailsViewZoomLevel=THUNAR_ZOOM_LEVEL_SMALLER
+LastIconViewZoomLevel=THUNAR_ZOOM_LEVEL_NORMAL
+LastLocationBar=ThunarLocationButtons
+LastSeparatorPosition=170
+LastShowHidden=FALSE
+LastSidePane=ThunarShortcutsPane
+LastSortColumn=THUNAR_COLUMN_NAME
+LastSortOrder=GTK_SORT_ASCENDING
+LastStatusbarVisible=TRUE
+LastView=ThunarIconView
+LastWindowHeight=480
+LastWindowWidth=640
+MiscVolumeManagement=TRUE
+MiscCaseSensitive=FALSE
+MiscFoldersFirst=TRUE
+MiscHorizontalWheelNavigates=FALSE
+MiscRecursivePermissions=THUNAR_RECURSIVE_PERMISSIONS_ASK
+MiscRememberGeometry=TRUE
+MiscShowAboutTemplates=TRUE
+MiscShowThumbnails=TRUE
+MiscSingleClick=TRUE
+MiscSingleClickTimeout=500
+MiscTextBesideIcons=FALSE
+ShortcutsIconEmblems=TRUE
+ShortcutsIconSize=THUNAR_ICON_SIZE_SMALLER
+TreeIconEmblems=TRUE
+TreeIconSize=THUNAR_ICON_SIZE_SMALLEST
+
