@@ -1,0 +1,30 @@
+[Configuration]
+AutomountDrives=TRUE
+AutomountMedia=TRUE
+Autobrowse=TRUE
+Autorun=FALSE
+Autoopen=TRUE
+Autoburn=FALSE
+AutoburnDataCommand=brasero
+AutoburnAudioCommand=brasero
+AutoplayAudioCd=TRUE
+AutoplayAudioCdCommand=audacious %d
+AutoplayVideoCd=TRUE
+AutoplayVideoCdCommand=audacious %d
+Autoipod=FALSE
+AutoipodCommand=
+Autophoto=FALSE
+AutophotoCommand=
+Autopalm=FALSE
+AutopalmCommand=gpilotd-control-applet
+Autopocketpc=FALSE
+AutopocketpcCommand=multisync
+Autoprinter=FALSE
+AutoprinterCommand=gnome-printer-add hal://%h
+Autokeyboard=FALSE
+AutokeyboardCommand=
+Automouse=FALSE
+AutomouseCommand=
+Autotablet=FALSE
+AutotabletCommand=
+
