@@ -1,0 +1,3 @@
+Terminal etc/xdg/
+Thunar   etc/xdg/
+xfce4    etc/xdg/
