@@ -1,8 +1,9 @@
 sidux-art-xfce (1.2) UNRELEASED; urgency=low
 
-  * NOT RELEASED YET
+  * Provide sidux-settings-xfce with global configuration files for the Xfce
+    desktop.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 27 Aug 2008 01:39:04 +0200
+ -- Kel Modderman <kel@otaku42.de>  Thu, 04 Sep 2008 07:42:28 +1000
 
 sidux-art-xfce (1.1) unstable; urgency=low
 
